# trashtalk

./: .gitignore  DESIGN.md  GUIDELINE.md  index.html  package-lock.json  package.json  roadmap.md
src/: i18n.ts  index.html  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/locales/: en.json  id.json
src-tauri/src/: category.rs  cli.rs  db.rs  ghost.rs  main.rs  scanner.rs  scheduler.rs
src-tauri/src/i18n/: mod.rs
src/types/: index.ts
