[package]
name = "trashtalk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.44"
clap = { version = "4.5.23", features = ["derive"] }
cli-table = "0.4"
dirs = "6.0.0"
filetime = "0.2.27"
regex = "1.11.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rust-i18n = "3.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-build = "2.0.3"
tauri-plugin-autostart = "2.2.0"
tokio = { version = "1", features = ["full"] }
walkdir = "2.5.0"

[build-dependencies]
tauri-build = "2.0.3"

[profile.release]
lto = true
opt-level = "z" # Optimize for size
codegen-units = 1
panic = "abort"
strip = true # Remove debug symbols
